tests/valid/null.ar
fn main() {
    let ptr = null;
}
