tests/invalid/i32_literal_overflow.ar
fn main()
{
    let a = 2147483648;
}
